# n8n-lint

./: .editorconfig  .gitignore  HISTORY.md  Makefile  README.md  RELEASE_NOTES.md  mkdocs.yml  planning-validation-separation.md  pyproject.toml  test_workflow.json  test_workflow_invalid.json
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  ISSUE_TEMPLATE.md  dependabot.yml
.github/workflows/: ci.yml  deploy.yml  docs.yml  pr-test.yml  test.yml
docs/: archive.md  console-output-formatting-plan.md  documentation-update-summary.md  index.md  installation.md  node-expansion-plan.md  reflection.md  status.md  tasks.md  technical.md  usage.md
docs/archive/: README.md  documentation-consolidation-20250910.md
docs/examples/: custom_node_schema.json  sample_workflow.json  workflow_with_errors.json
docs/stylesheets/: gruvbox.css
src/n8n_lint/: __init__.py  cli.py  errors.py  logger.py  utils.py  validator.py
src/n8n_lint/formatters/: base.py  console.py  html.py  json.py  markdown.py
src/n8n_lint/progress/: __init__.py  tracker.py
src/n8n_lint/schemas/: __init__.py  custom-node.json  function.json  http_request.json  if.json  n8n-nodes-base.testNode.json  registry.json  set.json  switch.json
tests/: test_cli.py  test_integration.py  test_logger.py  test_logger_fix.py  test_schemas.py  test_validator.py
